--- a/index.html
+++ b/index.html
@@ -497,6 +497,42 @@
 		</div>
 	</div>
 	<!-- End Footer -->
+
+	<!-- Start Copy right -->
+	<div class="copyright">
+		<div class="container">
+			<div class="row">
+				<div class="col text-lift text-uppercase">
+					Copyright 2018 EliteCorp &copy; All Right Reserved.
+				</div>
+				<div class="col text-right">
+					<ul class="list-unstyled">
+						<li>
+							<a href="#">
+								<i class="fa fa-facebook"></i>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="fa fa-twitter"></i>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="fa fa-youtube"></i>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<i class="fa fa-google-plus"></i>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- End Copy Right -->
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/main.js"></script>
